tests/netedit/demandelements/waypoint/basic/invalid_type/routes.netedit
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2022-04-21 10:14:44 by Eclipse SUMO netedit Version v1_12_0+2200-a642e05db6c
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <!-- Routes -->
    <route id="route_0" edges="gneE0 gneE1" color="yellow">
        <stop lane="gneE0_0" startPos="17.00" endPos="27.00" duration="60.00" speed="13.89"/>
    </route>
</routes>
